<resources>
    <string name="app_name">My Application</string>
    <string name="mapbox_access_token" translatable="false">pk.eyJ1IjoiZWxzZXZhIiwiYSI6ImNrbzF2NXpwbzAwemEycWxyczlldGd0cmcifQ.mlUhtNIZLLEc4-PTUz96EA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Login">Login</string>
    <string name="register">Register</string>
    <string name="Cuenta">Ya tienes una cuenta?</string>
    <string name="logout">Log Out</string>
    <string name="n">N°</string>
    <string name="nombre_resena">Nombre de la Reseña</string>
    <string name="comentario">Comentario</string>
    <string name="nombre_garage">Nombre Garage</string>
    <string name="fecha_inicio">Fecha Inicio</string>
    <string name="separador">|</string>
    <string name="fecha_final">Fecha Final</string>
    <string name="estado">Estado</string>
    <string name="imagen_de_fondo">Imagen de fondo</string>
    <string name="garage">Garage</string>
    <string name="perfil">Perfil</string>
    <string name="ver_promociones">Ver Promociones</string>
    <string name="dar_promociones">Dar Promociones</string>
    <string name="imagen_fondo">Imagen secundaria de fondo</string>
    <string name="channel_description">Pruebas de notificaciones</string>
    <string name="tipo_de_vehiculo">Tipo de Vehiculo</string>
    <string name="boton_para_buscar_comunas">Boton para buscar comunas</string>
    <string name="ver_garage">Ver Garage</string>
    <string name="enviar_comentario">Enviar comentario</string>
    <string name="enviar_sugerencia">Enviar sugerencia</string>
    <string name="enviar_sugerencias">Enviar Sugerencias</string>
    <string name="enviar_correo">Enviar correo</string>

</resources>