<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvNumeroComentario"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:text="@string/n"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/tvResenaNombre"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/nombre_resena" />

        <TextView
            android:id="@+id/tvComentario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tvResenaNombre"
            android:layout_below="@+id/tvResenaNombre"
            android:text="@string/comentario" />

        <RatingBar
            android:id="@+id/rbResena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvComentario"
            android:layout_toEndOf="@id/tvNumeroComentario"
            android:numStars="5"
            android:stepSize="0.2"
            android:isIndicator="true"/>
    </RelativeLayout>
</FrameLayout>